修复 FeedHeaderView 中 imageCollectionView 的布局错误问题

--- a/Lucuber/Views/CommentHeader/FeedHeaderView.xib
+++ b/Lucuber/Views/CommentHeader/FeedHeaderView.xib
@@ -58,7 +58,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="Q79-JF-cWP"/>
                     </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N7S-nO-BCg">
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="4" minimumInteritemSpacing="4" id="N7S-nO-BCg">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
