--- a/Lucuber/ViewControllers/Timer/Timer.storyboard
+++ b/Lucuber/ViewControllers/Timer/Timer.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dFP-U9-BET">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,65 +17,103 @@
                         <viewControllerLayoutGuide type="bottom" id="cs4-H0-BJc"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="PrV-DT-zYv">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="32" translatesAutoresizingMaskIntoConstraints="NO" id="9IN-Qc-Did" customClass="TimerLabel" customModule="LucuberTimer">
-                                <rect key="frame" x="30" y="264" width="315" height="60"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ua5-BZ-4Yx">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="470"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="32" translatesAutoresizingMaskIntoConstraints="NO" id="9IN-Qc-Did" customClass="TimerLabel" customModule="LucuberTimer">
+                                        <rect key="frame" x="10" y="270" width="394" height="105"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="90"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJg-rn-OMo" customClass="TimerControlView" customModule="Lucuber" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="380" width="414" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="d2U-Xe-z2W"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading" translatesAutoresizingMaskIntoConstraints="NO" id="esw-vX-KNI">
+                                        <rect key="frame" x="0.0" y="430" width="414" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="h7S-Yr-H7S"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="pv8-Il-z1v">
+                                        <rect key="frame" x="70" y="192" width="274" height="28"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Label">
+                                                <attributes>
+                                                    <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <font key="NSFont" size="24" name="Menlo-Regular"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.53725490196078429" green="0.53725490196078429" blue="0.53725490196078429" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="HEm-ey-Ab6"/>
+                                    <constraint firstItem="esw-vX-KNI" firstAttribute="top" secondItem="qJg-rn-OMo" secondAttribute="bottom" constant="20" id="4B5-cj-8JB"/>
+                                    <constraint firstItem="9IN-Qc-Did" firstAttribute="leading" secondItem="Ua5-BZ-4Yx" secondAttribute="leading" constant="10" id="4QN-xb-eR1"/>
+                                    <constraint firstAttribute="height" constant="470" id="APL-9Z-ul4"/>
+                                    <constraint firstAttribute="trailing" secondItem="9IN-Qc-Did" secondAttribute="trailing" constant="10" id="C2O-hD-aRG"/>
+                                    <constraint firstItem="9IN-Qc-Did" firstAttribute="top" secondItem="pv8-Il-z1v" secondAttribute="bottom" constant="50" id="CYY-2g-hsb"/>
+                                    <constraint firstItem="qJg-rn-OMo" firstAttribute="leading" secondItem="Ua5-BZ-4Yx" secondAttribute="leading" id="FZO-cy-UZ3"/>
+                                    <constraint firstAttribute="bottom" secondItem="esw-vX-KNI" secondAttribute="bottom" constant="-5" id="Jcu-A5-my2"/>
+                                    <constraint firstItem="esw-vX-KNI" firstAttribute="leading" secondItem="Ua5-BZ-4Yx" secondAttribute="leading" id="NkM-0r-Vfs"/>
+                                    <constraint firstAttribute="trailing" secondItem="pv8-Il-z1v" secondAttribute="trailing" constant="70" id="Q5S-wI-w1R"/>
+                                    <constraint firstItem="qJg-rn-OMo" firstAttribute="top" secondItem="9IN-Qc-Did" secondAttribute="bottom" constant="5" id="STu-2U-C3W"/>
+                                    <constraint firstAttribute="trailing" secondItem="esw-vX-KNI" secondAttribute="trailing" id="anD-Gm-usA"/>
+                                    <constraint firstItem="pv8-Il-z1v" firstAttribute="leading" secondItem="Ua5-BZ-4Yx" secondAttribute="leading" constant="70" id="gMj-SQ-3Qo"/>
+                                    <constraint firstAttribute="trailing" secondItem="qJg-rn-OMo" secondAttribute="trailing" id="sEm-qC-I6g"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="70"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pv8-Il-z1v">
-                                <rect key="frame" x="50" y="160" width="275" height="27.5"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJg-rn-OMo" customClass="TimerControlView" customModule="LucuberTimer">
-                                <rect key="frame" x="0.0" y="329" width="375" height="30"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bjI-gM-Ecv" customClass="ScoreView" customModule="Lucuber" customModuleProvider="target">
+                                <rect key="frame" x="9" y="478" width="165" height="201"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="4ge-Iu-5BK"/>
+                                    <constraint firstAttribute="width" constant="165" id="PRK-eI-bX9"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnN-gm-mcY">
+                                <rect key="frame" x="253" y="478" width="150" height="201"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="NqW-xP-rFA"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="9IN-Qc-Did" firstAttribute="centerX" secondItem="PrV-DT-zYv" secondAttribute="centerX" id="Abc-Yj-I9s"/>
-                            <constraint firstItem="pv8-Il-z1v" firstAttribute="leading" secondItem="PrV-DT-zYv" secondAttribute="leading" constant="50" id="D4F-bd-n48"/>
-                            <constraint firstItem="qJg-rn-OMo" firstAttribute="top" secondItem="9IN-Qc-Did" secondAttribute="bottom" constant="5" id="Ihe-fe-EVp"/>
-                            <constraint firstItem="pv8-Il-z1v" firstAttribute="top" secondItem="AMq-Eg-BGp" secondAttribute="bottom" constant="140" id="WFX-tE-vfY"/>
-                            <constraint firstAttribute="trailing" secondItem="pv8-Il-z1v" secondAttribute="trailing" constant="50" id="ZWT-5B-rqn"/>
-                            <constraint firstAttribute="trailing" secondItem="9IN-Qc-Did" secondAttribute="trailing" constant="30" id="bqS-W9-cbw"/>
-                            <constraint firstItem="qJg-rn-OMo" firstAttribute="leading" secondItem="PrV-DT-zYv" secondAttribute="leading" id="o10-p9-Xyd"/>
-                            <constraint firstItem="9IN-Qc-Did" firstAttribute="leading" secondItem="PrV-DT-zYv" secondAttribute="leading" constant="30" id="qvS-FH-ui3"/>
-                            <constraint firstAttribute="trailing" secondItem="qJg-rn-OMo" secondAttribute="trailing" id="wwz-Zu-4Yh"/>
-                            <constraint firstItem="9IN-Qc-Did" firstAttribute="centerY" secondItem="PrV-DT-zYv" secondAttribute="centerY" constant="-40" id="yYi-MH-4lV"/>
+                            <constraint firstItem="cs4-H0-BJc" firstAttribute="top" secondItem="bnN-gm-mcY" secondAttribute="bottom" constant="8" id="2BR-r8-fPF"/>
+                            <constraint firstItem="cs4-H0-BJc" firstAttribute="top" secondItem="bjI-gM-Ecv" secondAttribute="bottom" constant="8" id="2bk-zE-f0m"/>
+                            <constraint firstItem="Ua5-BZ-4Yx" firstAttribute="leading" secondItem="PrV-DT-zYv" secondAttribute="leading" id="I9H-Xw-kKh"/>
+                            <constraint firstAttribute="trailing" secondItem="Ua5-BZ-4Yx" secondAttribute="trailing" id="NPS-8J-IVo"/>
+                            <constraint firstItem="bjI-gM-Ecv" firstAttribute="top" secondItem="Ua5-BZ-4Yx" secondAttribute="bottom" constant="8" id="NVS-ao-eVs"/>
+                            <constraint firstItem="Ua5-BZ-4Yx" firstAttribute="top" secondItem="PrV-DT-zYv" secondAttribute="top" id="Opo-IB-jyG"/>
+                            <constraint firstItem="bjI-gM-Ecv" firstAttribute="leading" secondItem="PrV-DT-zYv" secondAttribute="leading" constant="9" id="lwR-Bf-bBb"/>
+                            <constraint firstAttribute="trailing" secondItem="bnN-gm-mcY" secondAttribute="trailing" constant="11" id="oVa-P7-fOj"/>
+                            <constraint firstItem="bnN-gm-mcY" firstAttribute="top" secondItem="Ua5-BZ-4Yx" secondAttribute="bottom" constant="8" id="yeL-3e-VnE"/>
                         </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="pGg-SW-wmd" appends="YES" id="NGx-OJ-KzK"/>
-                            <outletCollection property="gestureRecognizers" destination="ntk-Tk-sjl" appends="YES" id="3Ow-eX-b9s"/>
-                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="2S1-h3-fAq"/>
                     <connections>
-                        <outlet property="longPressGesture" destination="pGg-SW-wmd" id="TUo-eI-8XE"/>
+                        <outlet property="scoreView" destination="bjI-gM-Ecv" id="S40-o4-GC8"/>
                         <outlet property="scramblingLabel" destination="pv8-Il-z1v" id="aQq-PB-sTy"/>
-                        <outlet property="tapGesture" destination="ntk-Tk-sjl" id="LoB-WV-5pd"/>
                         <outlet property="timerControl" destination="qJg-rn-OMo" id="JeA-4l-YVj"/>
                         <outlet property="timerLabel" destination="9IN-Qc-Did" id="ddv-Ag-RoI"/>
+                        <outlet property="topBackgroundView" destination="Ua5-BZ-4Yx" id="Vab-Z3-Y8H"/>
+                        <outlet property="topContaninerViewConstarint" destination="APL-9Z-ul4" id="K13-g2-fpF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vzp-Q1-4iF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="pGg-SW-wmd"/>
-                <tapGestureRecognizer id="ntk-Tk-sjl"/>
             </objects>
-            <point key="canvasLocation" x="3112.8000000000002" y="659.82008995502258"/>
+            <point key="canvasLocation" x="3111.594202898551" y="657.88043478260875"/>
         </scene>
         <!--计时器-->
         <scene sceneID="KtA-Ru-xPf">
@@ -100,6 +138,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="loading" width="414" height="45"/>
         <image name="tabbar_time" width="28" height="30"/>
         <image name="tabbar_time_sele" width="28" height="30"/>
     </resources>
