--- a/Lucuber/Views/Cell/ScoreCell/ScoreCell.xib
+++ b/Lucuber/Views/Cell/ScoreCell/ScoreCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="241" height="26"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="09v-AC-AMx">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OvalBlue" translatesAutoresizingMaskIntoConstraints="NO" id="09v-AC-AMx">
                         <rect key="frame" x="20" y="10.5" width="5" height="5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="5" id="BS3-rh-CoO"/>
@@ -25,7 +25,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPt-CT-XZz">
-                        <rect key="frame" x="40" y="0.0" width="181" height="25.5"/>
+                        <rect key="frame" x="35" y="0.0" width="186" height="25.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -34,12 +34,13 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="GPt-CT-XZz" secondAttribute="trailing" constant="20" id="40y-yd-084"/>
                     <constraint firstItem="GPt-CT-XZz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9Jg-lO-old"/>
-                    <constraint firstItem="GPt-CT-XZz" firstAttribute="leading" secondItem="09v-AC-AMx" secondAttribute="trailing" constant="15" id="Af5-K8-Ze3"/>
+                    <constraint firstItem="GPt-CT-XZz" firstAttribute="leading" secondItem="09v-AC-AMx" secondAttribute="trailing" constant="10" id="Af5-K8-Ze3"/>
                     <constraint firstItem="09v-AC-AMx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="R8B-Hm-Mm3"/>
                     <constraint firstItem="09v-AC-AMx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cBn-Cp-nUS"/>
                     <constraint firstAttribute="bottom" secondItem="GPt-CT-XZz" secondAttribute="bottom" id="lDS-uL-7IS"/>
                 </constraints>
             </tableViewCellContentView>
+            <inset key="separatorInset" minX="1000" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="indicatorImageView" destination="09v-AC-AMx" id="5Iu-A7-6Jy"/>
                 <outlet property="scoreLabel" destination="GPt-CT-XZz" id="fcq-CV-P2r"/>
@@ -47,4 +48,7 @@
             <point key="canvasLocation" x="-5.5" y="45"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="OvalBlue" width="40" height="40"/>
+    </resources>
 </document>
